@@ -6333,6 +6333,13 @@ See also "Menus history" section.
 load a newer navigation menu if there is one.
 See also "Menus history" section.
 .TP
+.BI "                                         :find"
+.TP
+.BI :fin[d]
+the behaviour matches that of non-menu :find except that no range is
+accepted.  If active view contained selection before entering menu mode,
+the command takes it into account.
+.TP
 .BI "                                         :grep"
 .TP
 .BI :gr[ep]
